# YOLO11-TensorRT-ROS

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: calibrator.h  config.h  infer.h  postprocess.h  types.h
launch/: yolo11.launch
src/: calibrator.cpp  infer.cpp  main.cpp
